# agentic-project-cookiecutter

./: .envrc  LICENSE  README.md  cookiecutter.json  pyproject.toml
.github/workflows/: release.yaml
tests/: conftest.py
{{ cookiecutter.package_name }}/: AGENTS.md  pyproject.toml
{{ cookiecutter.package_name }}/src/{{cookiecutter.package_name}}/: __main__.py  config_utils.py
